--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/toolbar-android": "^0.2.1",
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
@@ -24,14 +25,17 @@
     "expo-document-picker": "~10.2.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.4",
     "native-base": "^3.4.9",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.2.5",
     "react-native-document-picker": "^8.1.1",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.28.1",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.8.0",
