--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.28.1",
     "react-native-paper": "^4.12.4",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-select-dropdown": "^2.0.4",
     "react-native-sidebar": "^0.3.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "12.3.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
