--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@dietime/react-native-date-picker": "^1.2.0",
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/toolbar-android": "^0.2.1",
     "@react-native-material/core": "^1.3.7",
@@ -37,6 +36,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.28.1",
+    "react-native-neat-date-picker": "^1.3.2",
     "react-native-paper": "^4.12.4",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.8.0",
@@ -48,7 +48,7 @@
     "react-native-svg": "12.3.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "^0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
