--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-svg": "12.3.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.17.7"
+    "react-native-web": "^0.17.7",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
